# tas-log-reader

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.cargo/: config.toml
.github/workflows/: ci.yml
build-aux/: rs.bxt.TasLogReader.Devel.json
data/: meson.build  rs.bxt.TasLogReader.desktop.in.in  rs.bxt.TasLogReader.gschema.xml  rs.bxt.TasLogReader.gschema.xml.in  rs.bxt.TasLogReader.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style-dark.css  style.css
data/resources/ui/: meson.build  shortcuts.blp  table.blp  table.ui  window.blp  window.ui
po/: POTFILES.in  meson.build
src/: application.rs  config.rs.in  main.rs  meson.build  row.rs  table.rs  tas_log.rs  window.rs
subprojects/: blueprint-compiler.wrap
