[package]
name = "tas-log-reader"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.17"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
once_cell = "1.10.0"
gtk = { package = "gtk4", version = "0.4.7", features = ["v4_6"] }
glib = { version = "0.15.11", features = ["log", "log_macros"] }
adw = { version = "0.1.1", package = "libadwaita" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[profile.release]
debug = true
