[package]
name = "tas-log-reader"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"

[dependencies]
adw = { version = "0.1.1", package = "libadwaita" }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
glib = { version = "0.15.11", features = ["log", "log_macros"] }
gtk = { package = "gtk4", version = "0.4.7", features = ["v4_6"] }
log = "0.4.17"
once_cell = "1.10.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[profile.release]
debug = true
